fixed swagger docu
